--- a/shi-yong-pelicannginx-da-jian-jing-tai-blog.html
+++ b/shi-yong-pelicannginx-da-jian-jing-tai-blog.html
@@ -8,7 +8,7 @@
         <meta name="author" content="Jiajun Fan" />
         <meta name="description" content="对于个人网站来说，很多情况下一个简单易用的静态Blog就足够了。现在有很多工具可以帮助我们搭建这样的静态Blog，熟悉Ruby的同学可以使用Octopress或者Jekyll，喜欢Python的可以用Pelican，node.js下有Hexo，MetalSmith等等。本文以Pelican+Nginx为例，讲述如何建立一个静态Blog。 安装Pelican Pelican是一个基于Python的静态网站生成工具，可以简单地使用pip来安装。如果尚未安装Python或者pip，请自行google，安装Pelican时请视需要加上sudo。 pip install pelican markdown 建立静态Blog 首先创建一个目录储存你的Blog mkdir -p ~/projects/yoursite cd ~/projects/yoursite 进入目录之后创建一个新的Pelican工程 pelican-quickstart Pelican会询问一系列配置问题，请按需回答。 此时在yoursite目录下新建了一个名为content的目录，该目录用于存放你的博客文章 ..." />
 
-    <title>使用 Pelican+Nginx 搭建静态 Blog - Jiajun's Blog</title>
+    <title>使用 Pelican+Nginx 搭建静态 Blog - 一朵云</title>
 
     <link rel="stylesheet" href="/theme/css/bootstrap.min.css">
     <link rel="stylesheet" href="/theme/css/style.css" >
@@ -33,7 +33,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="/" class="navbar-brand"> Jiajun's Blog </a>
+            <a href="/" class="navbar-brand"> 一朵云 </a>
         </div>
         <div class="collapse navbar-collapse navbar-right">
             <ul class="nav navbar-nav">
@@ -190,6 +190,7 @@ Nginx可以通过<code>apt-get</code>来安装：</p>
                 本站所有文章欢迎转载，转载时请附上原文链接<br/>
                 如果本站的内容侵犯了您的合法权益，请联系我们，我们会尽快修改或删除<br/>
                 </p>
+                <a href="http://www.miitbeian.gov.cn/">沪ICP备14043270号</a>
             <div>
         </div>
     </div>
