--- a/authors.html
+++ b/authors.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="Jiajun Fan" />
 
-    <title>Authors - Jiajun's Blog</title>
+    <title>Authors - 一朵云</title>
 
     <link rel="stylesheet" href="/theme/css/bootstrap.min.css">
     <link rel="stylesheet" href="/theme/css/style.css" >
@@ -32,7 +32,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="/" class="navbar-brand"> Jiajun's Blog </a>
+            <a href="/" class="navbar-brand"> 一朵云 </a>
         </div>
         <div class="collapse navbar-collapse navbar-right">
             <ul class="nav navbar-nav">
@@ -48,7 +48,7 @@
     <div class="row">
         <div class="col-lg-12">
 
-    <h1>Authors on Jiajun's Blog</h1>
+    <h1>Authors on 一朵云</h1>
         <li><a href="/author/jiajun-fan.html">Jiajun Fan</a> (2)</li>
         </div>
     </div>
@@ -79,6 +79,7 @@
                 本站所有文章欢迎转载，转载时请附上原文链接<br/>
                 如果本站的内容侵犯了您的合法权益，请联系我们，我们会尽快修改或删除<br/>
                 </p>
+                <a href="http://www.miitbeian.gov.cn/">沪ICP备14043270号</a>
             <div>
         </div>
     </div>
