--- a/categories.html
+++ b/categories.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="Jiajun Fan" />
 
-    <title>Categories - Jiajun's Blog</title>
+    <title>Categories - 一朵云</title>
 
     <link rel="stylesheet" href="/theme/css/bootstrap.min.css">
     <link rel="stylesheet" href="/theme/css/style.css" >
@@ -32,7 +32,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="/" class="navbar-brand"> Jiajun's Blog </a>
+            <a href="/" class="navbar-brand"> 一朵云 </a>
         </div>
         <div class="collapse navbar-collapse navbar-right">
             <ul class="nav navbar-nav">
@@ -49,7 +49,7 @@
         <div class="col-lg-12">
 
     <section id="categories">
-        <h1>All Categories for Jiajun's Blog</h1>
+        <h1>All Categories for 一朵云</h1>
         <div class="panel-group" id="accordion">
             <div class="panel panel-default">
                 <div class="panel-heading">
@@ -96,6 +96,7 @@
                 本站所有文章欢迎转载，转载时请附上原文链接<br/>
                 如果本站的内容侵犯了您的合法权益，请联系我们，我们会尽快修改或删除<br/>
                 </p>
+                <a href="http://www.miitbeian.gov.cn/">沪ICP备14043270号</a>
             <div>
         </div>
     </div>
